first untested pass at trunk config

--- a/etc/ansible/roles/openstack-ml2/providers/nxos/conf_trunk_port.yaml
+++ b/etc/ansible/roles/openstack-ml2/providers/nxos/conf_trunk_port.yaml
@@ -1,3 +1,12 @@
 ---
-- fail:
-    msg: Trunk port configuration is not implimented for nxos
+- name: "nxos: run configure trunk port using network_cli"
+  nxos_command:
+      commands:
+          - config
+          - "default interface {{ port_name }}"
+          - "interface {{ port_name }}"
+          - "switchport mode trunk"
+          - "switchport trunk native vlan {{ _vlan_id }}"
+          - "switchport trunk allowed vlan add {{ _vlan_id }}{% for vlan in trunked_vlans %} {{ vlan }}{% endfor %}" 
+          - exit
+  connection: network_cli
